# MedicalIntelligence

./: .gitignore  CMakeLists.txt  common.pri  medical-intelligence.pro
src/core/: CMakeLists.txt  core.pro
src/core/src/: core.cpp  core.h
src/core/src/app/appointment/: appointmentappservice.h  appointmentappserviceimpl.cpp  appointmentappserviceimpl.h
src/core/src/app/attendance/: attendanceappservice.h  attendanceappserviceimpl.cpp  attendanceappserviceimpl.h
src/core/src/app/case/: caseappservice.h  caseappserviceimpl.cpp  caseappserviceimpl.h
src/core/src/app/chat/: chatappservice.h  chatappserviceimpl.cpp  chatappserviceimpl.h
src/core/src/app/consultation/: consultationappservice.h  consultationappserviceimpl.cpp  consultationappserviceimpl.h
src/core/src/app/doctor/: doctorappservice.h  doctorappserviceimpl.cpp  doctorappserviceimpl.h
src/core/src/app/patient/: patientappservice.h  patientappserviceimpl.cpp  patientappserviceimpl.h
src/core/src/domain/: id.cpp  id.h
src/core/src/domain/appointment/: appointment.cpp  appointment.h  appointmentfactory.cpp  appointmentfactory.h  appointmentrepository.h  appointmentservice.cpp  appointmentservice.h  appointmentstatus.cpp  appointmentstatus.h  appointmenttimeslot.cpp  appointmenttimeslot.h
src/core/src/domain/attendance/: attendance.cpp  attendance.h  attendancefactory.cpp  attendancefactory.h  attendancerepository.h
src/core/src/domain/case/: case.cpp  case.h  caseadvice.cpp  caseadvice.h  casediagnosis.cpp  casediagnosis.h  casefactory.cpp  casefactory.h  caseprescription.cpp  caseprescription.h  caserepository.h  caseservice.cpp  caseservice.h
src/core/src/domain/consultation/: consultationanswer.cpp  consultationanswer.h  consultationprovider.h  consultationquestion.cpp  consultationquestion.h
src/core/src/domain/doctor/: dailypatientlimit.cpp  dailypatientlimit.h  department.cpp  department.h  doctor.cpp  doctor.h  doctorfactory.cpp  doctorfactory.h  doctorrepository.h  doctorservice.cpp  doctorservice.h  employeeid.cpp  employeeid.h  profile.cpp  profile.h  registrationfee.cpp  registrationfee.h  workschedule.cpp  workschedule.h
src/core/src/domain/leave/: leavefactory.cpp  leavefactory.h  leaveperiod.cpp  leaveperiod.h  leaverecord.cpp  leaverecord.h  leaverecordfactory.h  leaverecordrepository.h  leaverecordservice.cpp  leaverecordservice.h  leavestatus.cpp  leavestatus.h
src/core/src/domain/message/: message.cpp  message.h  messagecontent.cpp  messagecontent.h  messagefactory.cpp  messagefactory.h  messagerepository.h  messageservice.cpp  messageservice.h
src/core/src/domain/patient/: birthday.cpp  birthday.h  email.cpp  email.h  gender.cpp  gender.h  patient.cpp  patient.h  patientfactory.cpp  patientfactory.h  patientrepository.h  patientservice.cpp  patientservice.h  phone.cpp  phone.h
src/core/src/domain/topic/: topic.cpp  topic.h  topicfactory.cpp  topicfactory.h  topicrepository.h
src/core/src/domain/user/: idcard.cpp  idcard.h  name.cpp  name.h  password.cpp  password.h  user.cpp  user.h
src/core/src/infra/config/: baseconfiguration.cpp  baseconfiguration.h  clientconfiguration.cpp  clientconfiguration.h  serverconfiguration.cpp  serverconfiguration.h
src/core/src/infra/protocol/: request.cpp  request.h  requestparser.cpp  requestparser.h  response.cpp  response.h  responseparser.cpp  responseparser.h
src/core/test/: core-test.pro  googletest.pri  tst_init.h
src/patient-client/: CMakeLists.txt  patient-client.pro
src/patient-client/src/: appointmentdata.cpp  appointmentdata.h  appointmentdata.ui  casedatabrief.cpp  casedatabrief.h  casedatabrief.ui  casedatadetails.cpp  casedatadetails.h  casedatadetails.ui  chooseidentity.cpp  chooseidentity.h  chooseidentity.ui  customtextedit.cpp  doctorinfobrief.cpp  doctorinfobrief.h  doctorinfobrief.ui  doctorinfodetails.cpp  doctorinfodetails.h  doctorinfodetails.ui  doctormessage.cpp  doctormessage.h  doctormessage.ui  imagedownloader.cpp  imagedownloader.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientappointment.cpp  patientappointment.h  patientappointment.ui  patientlogin.cpp  patientlogin.h  patientlogin.ui  patientmessage.cpp  patientmessage.ui  patientregister.cpp  patientregister.h  patientregister.ui  style.qss  (+10 more)
src/patient-client/test/: patient-client-test.pro  tst_init.h
src/server/: CMakeLists.txt  main.cpp  server.pro
src/server/src/: main.cpp
src/server/src/view/: appointmenthandler.h  attendancehandler.h  casehandler.h  chathandler.h  consultationhandler.h  doctorhandler.h  patienthandler.h
src/server/test/: main.cpp  tst_init.h
(+91 files in other folders)
